--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <div id="main" style="width: 250px;height: 250px;background-color: rgb(59, 59, 59);border: 10px solid rgba(0, 0, 0, 1);border-radius: 50vh;position: absolute;top: 30%;left: auto;align-self: flex-end;" >
             <div id="nob" style="position: absolute;top: -9%;left: 45%;width:10%;height: 5%;background-color: black;color: rgb(153, 152, 152);text-align:center;z-index: -1;cursor: default;user-select: none;font-size: 55%;" ></div>
             <div id="time" style="width:40%;position: absolute;top: 70%;left: 30% ;text-align: center;background-color: rgb(41, 41, 41);height:10%;color: white;font-weight: bold;text-align-last: center;padding-top: 5%;border-radius: 50%;" >00:00:00</div>
-            <div style="width: 100%;height: 100%;background-image: linear-gradient(-45deg,transparent,rgb(151, 151, 151),transparent);border-radius: 50%;" ></div>
+            <div style="width: 100%;height: 100%;background-image: linear-gradient(-45deg,transparent,rgb(151, 151, 151),transparent);border-radius: 50%;z-index:2" ></div>
         </div>
     </div>
 </body>
 <script src="script.js" ></script>
 
 </html>
+
